--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "sports",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
+    "start:prod": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
